fix alignment in announcement list

--- a/app/assets/stylesheets/app/partials/announcement-list.css.scss
+++ b/app/assets/stylesheets/app/partials/announcement-list.css.scss
@@ -1,7 +1,7 @@
 @import "app/vendor/rem";
 
 .announcement-list {
-    p {
+    .announcement-list-add {
         text-align: right;
     }
 }
